--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -161,9 +161,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/*\n",
+      " *  Original SymPy expressions:\n",
+      " *  \"[const REAL_SIMD_ARRAY uu_dDD11 = invdx1**2*(-5269*uu/1800 + 5*uu_i0_i1m1_i2_i3/3 - 5*uu_i0_i1m2_i2_i3/21 + 5*uu_i0_i1m3_i2_i3/126 - 5*uu_i0_i1m4_i2_i3/1008 + uu_i0_i1m5_i2_i3/3150 + 5*uu_i0_i1p1_i2_i3/3 - 5*uu_i0_i1p2_i2_i3/21 + 5*uu_i0_i1p3_i2_i3/126 - 5*uu_i0_i1p4_i2_i3/1008 + uu_i0_i1p5_i2_i3/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD22 = invdx2**2*(-5269*uu/1800 + 5*uu_i0_i1_i2m1_i3/3 - 5*uu_i0_i1_i2m2_i3/21 + 5*uu_i0_i1_i2m3_i3/126 - 5*uu_i0_i1_i2m4_i3/1008 + uu_i0_i1_i2m5_i3/3150 + 5*uu_i0_i1_i2p1_i3/3 - 5*uu_i0_i1_i2p2_i3/21 + 5*uu_i0_i1_i2p3_i3/126 - 5*uu_i0_i1_i2p4_i3/1008 + uu_i0_i1_i2p5_i3/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD33 = invdx3**2*(-5269*uu/1800 + 5*uu_i0_i1_i2_i3m1/3 - 5*uu_i0_i1_i2_i3m2/21 + 5*uu_i0_i1_i2_i3m3/126 - 5*uu_i0_i1_i2_i3m4/1008 + uu_i0_i1_i2_i3m5/3150 + 5*uu_i0_i1_i2_i3p1/3 - 5*uu_i0_i1_i2_i3p2/21 + 5*uu_i0_i1_i2_i3p3/126 - 5*uu_i0_i1_i2_i3p4/1008 + uu_i0_i1_i2_i3p5/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD00 = invdx0**2*(-5269*uu/1800 + 5*uu_i0m1_i1_i2_i3/3 - 5*uu_i0m2_i1_i2_i3/21 + 5*uu_i0m3_i1_i2_i3/126 - 5*uu_i0m4_i1_i2_i3/1008 + uu_i0m5_i1_i2_i3/3150 + 5*uu_i0p1_i1_i2_i3/3 - 5*uu_i0p2_i1_i2_i3/21 + 5*uu_i0p3_i1_i2_i3/126 - 5*uu_i0p4_i1_i2_i3/1008 + uu_i0p5_i1_i2_i3/3150),\n",
+      " *    const REAL_SIMD_ARRAY __RHS_exp_0 = vv,\n",
+      " *    const REAL_SIMD_ARRAY __RHS_exp_1 = wavespeed**2*(uu_dDD00 + uu_dDD11 + uu_dDD22 + uu_dDD33)]\"\n",
+      " */\n",
+      "{\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m5 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-5)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m4 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-4)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m2 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-2)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m1 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-1)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m5_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-5,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m4_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-4,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m3_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-3,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m1_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-1,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m5_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-5,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m4_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-4,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m3_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-3,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m2_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-2,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m5_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-5,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m4_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-4,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m3_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-3,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m2_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-2,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m1_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-1,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p1_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+1,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p2_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+2,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p3_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+3,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p4_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+4,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p5_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+5,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p2_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+2,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p3_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+3,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p4_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+4,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p5_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+5,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p1_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+1,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p3_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+3,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p4_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+4,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p5_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+5,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p1 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+1)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p2 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+2)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p4 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+4)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p5 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+5)]);\n",
+      "   const REAL_SIMD_ARRAY vv = ReadSIMD(&in_gfs[IDX5(VVGF, i0,i1,i2,i3)]);\n",
+      "   const double tmp_Rational_1_3150 = 0.0003174603174603174603174603174603175;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_1_3150);\n",
+      "   const double tmp_Rational_5_126 = 0.03968253968253968253968253968253968;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_5_126);\n",
+      "   const double tmp_Rational_5_3 = 1.666666666666666666666666666666667;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_5_3);\n",
+      "   const double tmp_Rational_m5269_1800 = -2.927222222222222222222222222222222;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5269_1800);\n",
+      "   const double tmp_Rational_m5_1008 = -0.004960317460317460317460317460317460;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5_1008);\n",
+      "   const double tmp_Rational_m5_21 = -0.2380952380952380952380952380952381;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5_21);\n",
+      "\n",
+      "   const REAL_SIMD_ARRAY tmp0 = MulSIMD(uu, _Rational_m5269_1800);\n",
+      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1p3_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1p2_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1p1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1m5_i2_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1m4_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1m3_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1m2_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1m1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1p5_i2_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx1, invdx1));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2p3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2p2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2p1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2m5_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2m4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2m3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2m2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2m1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2p5_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx2, invdx2));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD33 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2_i3p4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3p3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3p2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3p1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3m5, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2_i3m4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3m3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3m2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3m1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3p5, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx3, invdx3));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p4_i1_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0p3_i1_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0p2_i1_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0p1_i1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0m5_i1_i2_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0m4_i1_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0m3_i1_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0m2_i1_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0m1_i1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0p5_i1_i2_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx0, invdx0));\n",
+      "   const REAL_SIMD_ARRAY __RHS_exp_0 = vv;\n",
+      "   const REAL_SIMD_ARRAY __RHS_exp_1 = MulSIMD(AddSIMD(uu_dDD22, AddSIMD(uu_dDD11, AddSIMD(uu_dDD00, uu_dDD33))), MulSIMD(wavespeed, wavespeed));\n",
+      "   WriteSIMD(&rhs_gfs[IDX5(UUGF, i0, i1, i2, i3)], __RHS_exp_0);\n",
+      "   WriteSIMD(&rhs_gfs[IDX5(VVGF, i0, i1, i2, i3)], __RHS_exp_1);\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Step -1: Enable SIMD\n",
     "par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
