--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -222,21 +222,45 @@
      "output_type": "stream",
      "text": [
       "wavespeed**2*(2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD00*xx0**2 + uu_dDD11 + uu_dDD22/sin(xx1)**2)/xx0**2\n",
-      "Error: xx1 has 0 U's and D's, but \n",
-      "1 integers at the end. These must be equal.\n",
-      "Please rename your gridfunction.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'exit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-cc87c0c754ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     54\u001b[0m fin.FD_outputC(\"stdout\",\n\u001b[1;32m     55\u001b[0m                [lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=uu_rhs),\n\u001b[0;32m---> 56\u001b[0;31m                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=vv_rhs)])\n\u001b[0m",
-      "\u001b[0;32m~/jup/nrpytutorial/finite_difference.py\u001b[0m in \u001b[0;36mFD_outputC\u001b[0;34m(filename, sympyexpr_list)\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_digits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" integers at the end. These must be equal.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Please rename your gridfunction.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m             \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0;31m# Step 2a.2: Based on the variable name, find the rank of\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'exit' is not defined"
+      "/*\n",
+      " *  Original SymPy expressions:\n",
+      " *  \"[const double uu_dDD11 = invdx1**2*(-5*uu/2 + 4*uu_i0_i1m1_i2/3 - uu_i0_i1m2_i2/12 + 4*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
+      " *    const double uu_dD0 = invdx0*(-2*uu_i0m1_i1_i2/3 + uu_i0m2_i1_i2/12 + 2*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
+      " *    const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
+      " *    const double uu_dDD22 = invdx2**2*(-5*uu/2 + 4*uu_i0_i1_i2m1/3 - uu_i0_i1_i2m2/12 + 4*uu_i0_i1_i2p1/3 - uu_i0_i1_i2p2/12),\n",
+      " *    const double uu_dD1 = invdx1*(-2*uu_i0_i1m1_i2/3 + uu_i0_i1m2_i2/12 + 2*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
+      " *    rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv,\n",
+      " *    rhs_gfs[IDX4(VVGF, i0, i1, i2)] = wavespeed**2*(2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD00*xx0**2 + uu_dDD11 + uu_dDD22/sin(xx1)**2)/xx0**2]\"\n",
+      " */\n",
+      "{\n",
+      "   const double uu_i0_i1_i2m2 = in_gfs[IDX4(UUGF, i0,i1,i2-2)];\n",
+      "   const double uu_i0_i1_i2m1 = in_gfs[IDX4(UUGF, i0,i1,i2-1)];\n",
+      "   const double uu_i0_i1m2_i2 = in_gfs[IDX4(UUGF, i0,i1-2,i2)];\n",
+      "   const double uu_i0_i1m1_i2 = in_gfs[IDX4(UUGF, i0,i1-1,i2)];\n",
+      "   const double uu_i0m2_i1_i2 = in_gfs[IDX4(UUGF, i0-2,i1,i2)];\n",
+      "   const double uu_i0m1_i1_i2 = in_gfs[IDX4(UUGF, i0-1,i1,i2)];\n",
+      "   const double uu = in_gfs[IDX4(UUGF, i0,i1,i2)];\n",
+      "   const double uu_i0p1_i1_i2 = in_gfs[IDX4(UUGF, i0+1,i1,i2)];\n",
+      "   const double uu_i0p2_i1_i2 = in_gfs[IDX4(UUGF, i0+2,i1,i2)];\n",
+      "   const double uu_i0_i1p1_i2 = in_gfs[IDX4(UUGF, i0,i1+1,i2)];\n",
+      "   const double uu_i0_i1p2_i2 = in_gfs[IDX4(UUGF, i0,i1+2,i2)];\n",
+      "   const double uu_i0_i1_i2p1 = in_gfs[IDX4(UUGF, i0,i1,i2+1)];\n",
+      "   const double uu_i0_i1_i2p2 = in_gfs[IDX4(UUGF, i0,i1,i2+2)];\n",
+      "   const double vv = in_gfs[IDX4(VVGF, i0,i1,i2)];\n",
+      "   const double tmp0 = -(5.0 / 2.0)*uu;\n",
+      "   const double tmp1 = ((1.0 / 12.0))*uu_i0_i1m2_i2;\n",
+      "   const double tmp2 = -(1.0 / 12.0)*uu_i0_i1p2_i2;\n",
+      "   const double tmp3 = ((1.0 / 12.0))*uu_i0m2_i1_i2;\n",
+      "   const double tmp4 = -(1.0 / 12.0)*uu_i0p2_i1_i2;\n",
+      "   const double tmp5 = pow(xx0, 2);\n",
+      "   const double uu_dDD11 = pow(invdx1, 2)*(tmp0 - tmp1 + tmp2 + ((4.0 / 3.0))*uu_i0_i1m1_i2 + ((4.0 / 3.0))*uu_i0_i1p1_i2);\n",
+      "   const double uu_dD0 = invdx0*(tmp3 + tmp4 - (2.0 / 3.0)*uu_i0m1_i1_i2 + ((2.0 / 3.0))*uu_i0p1_i1_i2);\n",
+      "   const double uu_dDD00 = pow(invdx0, 2)*(tmp0 - tmp3 + tmp4 + ((4.0 / 3.0))*uu_i0m1_i1_i2 + ((4.0 / 3.0))*uu_i0p1_i1_i2);\n",
+      "   const double uu_dDD22 = pow(invdx2, 2)*(tmp0 + ((4.0 / 3.0))*uu_i0_i1_i2m1 - (1.0 / 12.0)*uu_i0_i1_i2m2 + ((4.0 / 3.0))*uu_i0_i1_i2p1 - (1.0 / 12.0)*uu_i0_i1_i2p2);\n",
+      "   const double uu_dD1 = invdx1*(tmp1 + tmp2 - (2.0 / 3.0)*uu_i0_i1m1_i2 + ((2.0 / 3.0))*uu_i0_i1p1_i2);\n",
+      "   rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv;\n",
+      "   rhs_gfs[IDX4(VVGF, i0, i1, i2)] = pow(wavespeed, 2)*(tmp5*uu_dDD00 + 2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD11 + uu_dDD22/pow(sin(xx1), 2))/tmp5;\n",
+      "}\n"
      ]
     }
    ],
@@ -284,6 +308,7 @@
     "    # PART 2:\n",
     "    vv_rhs -= contractedGammahatU[i]*uu_dD[i]\n",
     "    for j in range(DIM):\n",
+    "        # PART 1:\n",
     "        vv_rhs += rfm.ghatUU[i][j]*uu_dDD[i][j]\n",
     "\n",
     "vv_rhs *= wavespeed*wavespeed\n",
@@ -298,13 +323,6 @@
     "               [lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=uu_rhs),\n",
     "                lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=vv_rhs)])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
