--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -29,7 +29,10 @@
     "  & - e^{-4 \\phi} \\left (\\bar{D}_{i} \\bar{D}^{i} \\alpha + 2 \\bar{D}^{i} \\alpha \\bar{D}_{i} \\phi \\right ) \\; , \\\\\n",
     "  \\partial_{\\perp} \\bar{\\Lambda}^{i} {} = {} & \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i} + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} \\nonumber \\\\\n",
     "  & - 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi \\right ) + 2 \\bar{A}^{j k} \\Delta_{j k}^{i} \\nonumber \\\\\n",
-    "  & -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K \\; .\n",
+    "  & -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K \\\\\n",
+    "\\partial_{0} \\alpha &= -2 \\alpha K \\\\\n",
+    "  \\partial_{0} \\beta^{i} &= B^{i} \\\\\n",
+    "  \\partial_{0} B^{i} &= \\frac{3}{4} \\partial_{0} \\bar{\\Lambda}^{i} - \\eta B^{i} \\; .\n",
     "\\end{align}\n",
     "\n",
     "where the $\\text{TF}$ superscript denotes the trace-free part. Also, $\\bar{R}_{ij}$ is the conformal Ricci tensor, computed via\n",
@@ -43,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the above equations are properly covariant, components of the rank-1 and rank-2 tensors $\\varepsilon_{i j}$, $\\bar{A}_{i j}$, and $\\bar{\\Lambda}^{i}$ will drop to zero (destroying information) or diverge (to $\\infty$) at coordinate singularities. However, this behavior is well-understood in terms of the scale factors of the reference metric, enabling us to \"rescale out\" th\n",
+    "While the above equations are properly covariant, components of the rank-1 and rank-2 tensors $\\varepsilon_{i j}$, $\\bar{A}_{i j}$, and $\\bar{\\Lambda}^{i}$ will drop to zero (destroying information) or diverge (to $\\infty$) at coordinate singularities. However, this behavior is well-understood in terms of the scale factors of the reference metric, enabling us to define rescaled version of these quantities that are well behaved (so that, e.g., they can be finite differenced).\n",
     "\n",
     "For example, given a smooth vector *in a 3D Cartesian basis* $\\bar{\\Lambda}^{i}$, all components $\\bar{\\Lambda}^{x}$, $\\bar{\\Lambda}^{y}$, and $\\bar{\\Lambda}^{z}$ will be smooth (by assumption). When changing the basis to spherical coordinates (applying the appropriate Jacobian matrix transformation), we will find that since $\\phi = \\arctan(y/x)$, $\\bar{\\Lambda}^{\\phi}$ is given by\n",
     "\n",
@@ -71,7 +74,9 @@
     "\n",
     "$$\\bar{\\Lambda}^{i} = \\frac{\\lambda^i}{\\text{scalefactor[i]}} ,$$\n",
     "\n",
-    "where scalefactor\\[i\\] is the $i$th scale factor in the given coordinate system. Similarly, we define the smooth versions of $\\bar{A}_{ij}$ and $\\bar{\\varepsilon}_{ij}$ ($a_{ij}$ and $h_{ij}$, respectively) via\n",
+    "where scalefactor\\[i\\] is the $i$th scale factor in the given coordinate system. In an identical fashion, we define the smooth versions of $\\beta^i$ and $B^i$ to be $\\mathcal{V}^i$ and $\\mathcal{B}^i$, respectively. We refer to $\\mathcal{V}^i$ and $\\mathcal{B}^i$ as vet\\[i\\] and bet\\[i\\] respectively in the code after the Hebrew letters that bear some resemblance. \n",
+    "\n",
+    "Similarly, we define the smooth versions of $\\bar{A}_{ij}$ and $\\bar{\\varepsilon}_{ij}$ ($a_{ij}$ and $h_{ij}$, respectively) via\n",
     "\n",
     "\\begin{align}\n",
     "\\bar{A}_{ij} &= \\text{scalefactor[i]}\\ \\text{scalefactor[j]}\\  a_{ij} \\\\\n",
@@ -80,17 +85,30 @@
     "\n",
     "where in this case we *multiply* due to the fact that these tensors are purely covariant (as opposed to contravariant).\n",
     "\n",
+    "Since the scale factors are *time independent*, \n",
     "\n",
-    "In the below implementation of the BSSN equations, we will first define the right-hand sides of the equations for all \"evolved\" quantities \n",
+    "$$\\partial_t \\bar{A}_{ij} = \\text{scalefactor[i]}\\ \\text{scalefactor[j]}\\  \\partial_t a_{ij}.$$\n",
     "\n",
-    "$$\\left\\{\\varepsilon_{i j},\\bar{A}_{i j},W, K, \\bar{\\Lambda}^{i}\\right\\},$$ \n",
+    "Thus in the below implementation of the BSSN equations, we will first define the right-hand sides of the equations for all \"evolved\" quantities \n",
     "\n",
-    "and then divide or multiply the evolved quantities by the scale factors according to this prescription. Additionally, to ensure that spatial derivatives do not sample over a divergence, we simply apply the product/quotient rule. For example,\n",
+    "$$\\left\\{\\varepsilon_{i j},\\bar{A}_{i j},W, K, \\bar{\\Lambda}^{i}, \\alpha, \\beta^i, B^i\\right\\},$$ \n",
+    "\n",
+    "and then divide or multiply the indexed evolved quantities by the scale factors according to this prescription, so that the evolved variables are\n",
+    "\n",
+    "$$\\left\\{h_{i j},a_{i j},W, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\},$$ \n",
+    "respectively.\n",
+    "\n",
+    "Additionally, to ensure that *spatial* derivatives do not sample over a coordinate singularity (where there may be, e.g., a divergence), we simply apply the product/quotient rule. For example,\n",
     "\n",
     "$$\\bar{\\Lambda}^{i}_{\\, ,\\, j} = -\\frac{\\lambda^i}{(\\text{scalefactor[i]})^2}\\ \\partial_j \\left(\\text{scalefactor[i]}\\right) + \\frac{\\partial_j \\lambda^i}{\\text{scalefactor[i]}},$$\n",
     "\n",
-    "where $\\partial_j\\left(\\text{scalefactor[i]}\\right)$ is computed *exactly* using SymPy, and the derivative $\\partial_j \\lambda^i$ represents a derivative of a *smooth* quantity (so long as $\\bar{\\Lambda}^{i}$ is smooth in a Cartesian basis)."
+    "where $\\partial_j\\left(\\text{scalefactor[i]}\\right)$ **is computed exactly** using SymPy, and the derivative $\\partial_j \\lambda^i$ represents a derivative of a *smooth* quantity (so long as $\\bar{\\Lambda}^{i}$ is smooth in a Cartesian basis)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
