--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -253,11 +253,11 @@
      "text": [
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const double uu_dD1 = invdx1*(-2*uu_i0_i1m1_i2/3 + uu_i0_i1m2_i2/12 + 2*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
-      " *    const double uu_dD0 = invdx0*(-2*uu_i0m1_i1_i2/3 + uu_i0m2_i1_i2/12 + 2*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
-      " *    const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
+      " *  \"[const double uu_dDD22 = invdx2**2*(-5*uu/2 + 4*uu_i0_i1_i2m1/3 - uu_i0_i1_i2m2/12 + 4*uu_i0_i1_i2p1/3 - uu_i0_i1_i2p2/12),\n",
       " *    const double uu_dDD11 = invdx1**2*(-5*uu/2 + 4*uu_i0_i1m1_i2/3 - uu_i0_i1m2_i2/12 + 4*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
-      " *    const double uu_dDD22 = invdx2**2*(-5*uu/2 + 4*uu_i0_i1_i2m1/3 - uu_i0_i1_i2m2/12 + 4*uu_i0_i1_i2p1/3 - uu_i0_i1_i2p2/12),\n",
+      " *    const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
+      " *    const double uu_dD1 = invdx1*(-2*uu_i0_i1m1_i2/3 + uu_i0_i1m2_i2/12 + 2*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
+      " *    const double uu_dD0 = invdx0*(-2*uu_i0m1_i1_i2/3 + uu_i0m2_i1_i2/12 + 2*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
       " *    rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv,\n",
       " *    rhs_gfs[IDX4(VVGF, i0, i1, i2)] = wavespeed**2*(2*uu_dD0/xx0 + uu_dD1*sin(2*xx1)/(2*xx0**2*sin(xx1)**2) + uu_dDD00 + uu_dDD11/xx0**2 + uu_dDD22/(xx0**2*sin(xx1)**2))]\"\n",
       " */\n",
@@ -276,18 +276,18 @@
       "   const double uu_i0_i1_i2p1 = in_gfs[IDX4(UUGF, i0,i1,i2+1)];\n",
       "   const double uu_i0_i1_i2p2 = in_gfs[IDX4(UUGF, i0,i1,i2+2)];\n",
       "   const double vv = in_gfs[IDX4(VVGF, i0,i1,i2)];\n",
-      "   const double tmp0 = ((1.0 / 12.0))*uu_i0_i1m2_i2;\n",
-      "   const double tmp1 = -(1.0 / 12.0)*uu_i0_i1p2_i2;\n",
-      "   const double tmp2 = ((1.0 / 12.0))*uu_i0m2_i1_i2;\n",
-      "   const double tmp3 = -(1.0 / 12.0)*uu_i0p2_i1_i2;\n",
-      "   const double tmp4 = -(5.0 / 2.0)*uu;\n",
+      "   const double tmp0 = -(5.0 / 2.0)*uu;\n",
+      "   const double tmp1 = ((1.0 / 12.0))*uu_i0_i1m2_i2;\n",
+      "   const double tmp2 = -(1.0 / 12.0)*uu_i0_i1p2_i2;\n",
+      "   const double tmp3 = ((1.0 / 12.0))*uu_i0m2_i1_i2;\n",
+      "   const double tmp4 = -(1.0 / 12.0)*uu_i0p2_i1_i2;\n",
       "   const double tmp5 = pow(xx0, -2);\n",
       "   const double tmp6 = tmp5/pow(sin(xx1), 2);\n",
-      "   const double uu_dD1 = invdx1*(tmp0 + tmp1 - (2.0 / 3.0)*uu_i0_i1m1_i2 + ((2.0 / 3.0))*uu_i0_i1p1_i2);\n",
-      "   const double uu_dD0 = invdx0*(tmp2 + tmp3 - (2.0 / 3.0)*uu_i0m1_i1_i2 + ((2.0 / 3.0))*uu_i0p1_i1_i2);\n",
-      "   const double uu_dDD00 = pow(invdx0, 2)*(-tmp2 + tmp3 + tmp4 + ((4.0 / 3.0))*uu_i0m1_i1_i2 + ((4.0 / 3.0))*uu_i0p1_i1_i2);\n",
-      "   const double uu_dDD11 = pow(invdx1, 2)*(-tmp0 + tmp1 + tmp4 + ((4.0 / 3.0))*uu_i0_i1m1_i2 + ((4.0 / 3.0))*uu_i0_i1p1_i2);\n",
-      "   const double uu_dDD22 = pow(invdx2, 2)*(tmp4 + ((4.0 / 3.0))*uu_i0_i1_i2m1 - (1.0 / 12.0)*uu_i0_i1_i2m2 + ((4.0 / 3.0))*uu_i0_i1_i2p1 - (1.0 / 12.0)*uu_i0_i1_i2p2);\n",
+      "   const double uu_dDD22 = pow(invdx2, 2)*(tmp0 + ((4.0 / 3.0))*uu_i0_i1_i2m1 - (1.0 / 12.0)*uu_i0_i1_i2m2 + ((4.0 / 3.0))*uu_i0_i1_i2p1 - (1.0 / 12.0)*uu_i0_i1_i2p2);\n",
+      "   const double uu_dDD11 = pow(invdx1, 2)*(tmp0 - tmp1 + tmp2 + ((4.0 / 3.0))*uu_i0_i1m1_i2 + ((4.0 / 3.0))*uu_i0_i1p1_i2);\n",
+      "   const double uu_dDD00 = pow(invdx0, 2)*(tmp0 - tmp3 + tmp4 + ((4.0 / 3.0))*uu_i0m1_i1_i2 + ((4.0 / 3.0))*uu_i0p1_i1_i2);\n",
+      "   const double uu_dD1 = invdx1*(tmp1 + tmp2 - (2.0 / 3.0)*uu_i0_i1m1_i2 + ((2.0 / 3.0))*uu_i0_i1p1_i2);\n",
+      "   const double uu_dD0 = invdx0*(tmp3 + tmp4 - (2.0 / 3.0)*uu_i0m1_i1_i2 + ((2.0 / 3.0))*uu_i0p1_i1_i2);\n",
       "   rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv;\n",
       "   rhs_gfs[IDX4(VVGF, i0, i1, i2)] = pow(wavespeed, 2)*(tmp5*uu_dDD11 + ((1.0 / 2.0))*tmp6*uu_dD1*sin(2*xx1) + tmp6*uu_dDD22 + 2*uu_dD0/xx0 + uu_dDD00);\n",
       "}\n"
@@ -360,7 +360,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NRPy+ Module Code Validation: Do SymPy expressions for ScalarWaveCurvlinear RHSs agree between this tutorial and the NRPy+ ScalarWaveCurvlinear module?"
+    "### NRPy+ Module Code Validation\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the Curvilinear Scalar Wave equation (i.e., uu_rhs and vv_rhs) between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ ScalarWaveCurvilinear module.\n",
+    "\n",
+    "By default, we analyze the RHSs in Spherical coordinates, though other coordinate systems may be chosen."
    ]
   },
   {
@@ -373,7 +379,7 @@
      "output_type": "stream",
      "text": [
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
-      "^^^ Ignore the minor warning above.\n",
+      "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
       "Consistency check between ScalarWaveCurvilinear tutorial and NRPy+ module:\n",
       "uu_rhs - swc.uu_rhs: Should be zero:  0\n",
@@ -397,20 +403,20 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "# Step 8: Call the ScalarWaveCurvilinear() function from within the\n",
-    "#         ScalarWaveCurvilinear/ScalarWaveCurvilinear.py module,\n",
+    "# Step 8: Call the ScalarWaveCurvilinear_RHSs() function from within the\n",
+    "#         ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py module,\n",
     "#         which should do exactly the same as in Steps 1-6 above.\n",
-    "import ScalarWaveCurvilinear.ScalarWaveCurvilinear as swc\n",
-    "swc.ScalarWaveCurvilinear()\n",
+    "import ScalarWaveCurvilinear.ScalarWaveCurvilinear_RHSs as swrhs\n",
+    "swc.ScalarWaveCurvilinear_RHSs()\n",
     "\n",
     "# Step 9: Consistency check between the tutorial module above\n",
     "#         and the ScalarWaveCurvilinear() function from within the\n",
     "#         ScalarWaveCurvilinear/ScalarWaveCurvilinear.py module.\n",
     "# It is SAFE to ignore the warning from re-initializing the parameter RMAX.\n",
-    "print(\"^^^ Ignore the minor warning above.\\n\")\n",
+    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
     "print(\"Consistency check between ScalarWaveCurvilinear tutorial and NRPy+ module:\")\n",
-    "print(\"uu_rhs - swc.uu_rhs: Should be zero: \",sp.simplify(uu_rhs - swc.uu_rhs))\n",
-    "print(\"vv_rhs - swc.vv_rhs: Should be zero: \",sp.simplify(vv_rhs - swc.vv_rhs))"
+    "print(\"uu_rhs - swc.uu_rhs: Should be zero: \",sp.simplify(uu_rhs - swrhs.uu_rhs))\n",
+    "print(\"vv_rhs - swc.vv_rhs: Should be zero: \",sp.simplify(vv_rhs - swrhs.vv_rhs))"
    ]
   },
   {
