--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -176,9 +176,9 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter ScalarWave::wavespeed\n",
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const REAL_SIMD_ARRAY uu_dDD00 = invdx0**2*(-5269*uu/1800 + 5*uu_i0m1_i1_i2/3 - 5*uu_i0m2_i1_i2/21 + 5*uu_i0m3_i1_i2/126 - 5*uu_i0m4_i1_i2/1008 + uu_i0m5_i1_i2/3150 + 5*uu_i0p1_i1_i2/3 - 5*uu_i0p2_i1_i2/21 + 5*uu_i0p3_i1_i2/126 - 5*uu_i0p4_i1_i2/1008 + uu_i0p5_i1_i2/3150),\n",
+      " *  \"[const REAL_SIMD_ARRAY uu_dDD11 = invdx1**2*(-5269*uu/1800 + 5*uu_i0_i1m1_i2/3 - 5*uu_i0_i1m2_i2/21 + 5*uu_i0_i1m3_i2/126 - 5*uu_i0_i1m4_i2/1008 + uu_i0_i1m5_i2/3150 + 5*uu_i0_i1p1_i2/3 - 5*uu_i0_i1p2_i2/21 + 5*uu_i0_i1p3_i2/126 - 5*uu_i0_i1p4_i2/1008 + uu_i0_i1p5_i2/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD00 = invdx0**2*(-5269*uu/1800 + 5*uu_i0m1_i1_i2/3 - 5*uu_i0m2_i1_i2/21 + 5*uu_i0m3_i1_i2/126 - 5*uu_i0m4_i1_i2/1008 + uu_i0m5_i1_i2/3150 + 5*uu_i0p1_i1_i2/3 - 5*uu_i0p2_i1_i2/21 + 5*uu_i0p3_i1_i2/126 - 5*uu_i0p4_i1_i2/1008 + uu_i0p5_i1_i2/3150),\n",
       " *    const REAL_SIMD_ARRAY uu_dDD22 = invdx2**2*(-5269*uu/1800 + 5*uu_i0_i1_i2m1/3 - 5*uu_i0_i1_i2m2/21 + 5*uu_i0_i1_i2m3/126 - 5*uu_i0_i1_i2m4/1008 + uu_i0_i1_i2m5/3150 + 5*uu_i0_i1_i2p1/3 - 5*uu_i0_i1_i2p2/21 + 5*uu_i0_i1_i2p3/126 - 5*uu_i0_i1_i2p4/1008 + uu_i0_i1_i2p5/3150),\n",
-      " *    const REAL_SIMD_ARRAY uu_dDD11 = invdx1**2*(-5269*uu/1800 + 5*uu_i0_i1m1_i2/3 - 5*uu_i0_i1m2_i2/21 + 5*uu_i0_i1m3_i2/126 - 5*uu_i0_i1m4_i2/1008 + uu_i0_i1m5_i2/3150 + 5*uu_i0_i1p1_i2/3 - 5*uu_i0_i1p2_i2/21 + 5*uu_i0_i1p3_i2/126 - 5*uu_i0_i1p4_i2/1008 + uu_i0_i1p5_i2/3150),\n",
       " *    const REAL_SIMD_ARRAY __RHS_exp_0 = vv,\n",
       " *    const REAL_SIMD_ARRAY __RHS_exp_1 = wavespeed**2*(uu_dDD00 + uu_dDD11 + uu_dDD22)]\"\n",
       " */\n",
@@ -229,9 +229,9 @@
       "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5_21);\n",
       "\n",
       "   const REAL_SIMD_ARRAY tmp0 = MulSIMD(uu, _Rational_m5269_1800);\n",
+      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1p3_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1p2_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1p1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1m5_i2, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1m4_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1m3_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1m2_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1m1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1p5_i2, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx1, invdx1));\n",
       "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p4_i1_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0p3_i1_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0p2_i1_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0p1_i1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0m5_i1_i2, _Rational_1_3150, FusedMulAddSIMD(uu_i0m4_i1_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0m3_i1_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0m2_i1_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0m1_i1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0p5_i1_i2, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx0, invdx0));\n",
       "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2p3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2p2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2p1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2m5, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2m4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2m3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2m2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2m1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2p5, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx2, invdx2));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1p3_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1p2_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1p1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1m5_i2, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1m4_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1m3_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1m2_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1m1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1p5_i2, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx1, invdx1));\n",
       "   const REAL_SIMD_ARRAY __RHS_exp_0 = vv;\n",
       "   const REAL_SIMD_ARRAY __RHS_exp_1 = MulSIMD(AddSIMD(uu_dDD11, AddSIMD(uu_dDD00, uu_dDD22)), MulSIMD(wavespeed, wavespeed));\n",
       "   WriteSIMD(&rhs_gfs[IDX4(UUGF, i0, i1, i2)], __RHS_exp_0);\n",
@@ -419,8 +419,8 @@
    "source": [
     "sp.simplify(wavespeed**2*(sp.diff(uu_ID,xx[0],2) + \n",
     "                          sp.diff(uu_ID,xx[1],2) + \n",
-    "                          sp.diff(uu_ID,xx[2],2)) - \n",
-    "                          sp.diff(uu_ID,time,2))"
+    "                          sp.diff(uu_ID,xx[2],2))\n",
+    "            - sp.diff(uu_ID,time,2))"
    ]
   },
   {
